# get_temperature_cli

./: .gitignore  Pipfile  main.py  pyproject.toml
